--- a/views/subject.handlebars
+++ b/views/subject.handlebars
@@ -1,7 +1,7 @@
 <div id="subjectProfile">
     {{!-- {{ > subject}} --}}
     <div class="summary">
-        <h2>Name</h2>
+        <h2>{{subject.Name}}</h2>
             <p>Profile</p>
     </div>
 
