--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,47 +1,48 @@
 <main class="login">
-  <form>
+  <form class="form login-form">
     <div>
         <h2>Login</h2>
-      <label for="username"><b>Username</b></label>
+      <label for="email-login"><b>Username</b></label>
       <input
         type="text"
         placeholder="Enter Username"
         name="username"
-        id="username"
+        id="email-login"
         required
       />
-      <label for="password"><b>Password</b></label>
+      <label for="password-login"><b>Password</b></label>
       <input
         type="password"
         placeholder="Enter Password"
         name="password"
-        id="password"
+        id="password-login"
         required
       />
       <button type="submit" id="loginBtn">Login</button>
     </div>
   </form>
 
-  <form>
+  <form class="form signup-form">
     <div>
         <h2>Sign Up</h2>
-      <label for="username"><b>Username</b></label>
+      <label for="email-signup"><b>Username</b></label>
       <input
         type="text"
         placeholder="Enter Username"
         name="username"
-        id="newUsername"
+        id="email-signup"
         required
       />
-      <label for="password"><b>Password</b></label>
+      <label for="password-signup"><b>Password</b></label>
       <input
         type="password"
         placeholder="Enter Password"
         name="password"
-        id="newPassword"
+        id="password-signup"
         required
       />
       <button type="submit" id="signUpBtn">Sign Up</button>
     </div>
   </form>
 </main>
+<script src="/js/loginSignup.js"></script>
