set up route and js front end

--- a/views/questions.handlebars
+++ b/views/questions.handlebars
@@ -16,3 +16,4 @@
         <button type="submit" id="questionSubmit">Submit</button>
     </div>
 </section>
+<script src="/js/question.js"></script>
