--- a/views/subject.handlebars
+++ b/views/subject.handlebars
@@ -5,5 +5,5 @@
             <p>Profile</p>
     </div>
 
-    <button id="askQuestion">Ask Question</button>
+    <a href="/questions" id="askQuestion">Ask Question</a>
 </div>
