--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
 <main class="login">
-  <form>
+  <form class="login-form">
     <div>
         <h2>Login</h2>
       <label for="username"><b>Username</b></label>
@@ -22,7 +22,7 @@
     </div>
   </form>
 
-  <form>
+  <form class="signup-form">
     <div>
         <h2>Sign Up</h2>
       <label for="username"><b>Username</b></label>
@@ -45,3 +45,5 @@
     </div>
   </form>
 </main>
+
+<script src="./js/login.js"></script>
