--- a/views/partials/profile-summary.handlebars
+++ b/views/partials/profile-summary.handlebars
@@ -1,9 +1,12 @@
+
 <div class="summary">
-    <h2>Name</h2>
+    <a href="subject/{{id}}">
+        <h2>{{Name}}</h2>
+    </a>
     <div class="typeSummary">
-        <p>Type1: 5</p>
-        <p>Type2: -2</p>
-        <p>Type3: 3</p>
-        <p>Type4: 0</p>
+        <p>Type1: {{Type_one_answers}}</p>
+        <p>Type2: {{Type_two_answers}}</p>
+        <p>Type3: {{Type_three_answers}}</p>
+        <p>Type4: {{Type_four_answers}}</p>
     </div>
 </div>
