--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,16 +1,9 @@
 <div class="home">
     <button id="addSubject">+ Subject</button>
 
-    {{!-- {{#each }}
-    {{> profile-summery}}
-    {{/each}} --}}
-<div class="summary">
-    <h2>Nhat</h2>
-    <div class="typeSummary">
-        <p>Type1: 5</p>
-        <p>Type2: -2</p>
-        <p>Type3: 3</p>
-        <p>Type4: 0</p>
-    </div>
+    {{#each subjects as |subject|}}
+    {{> profile-summary}}
+    {{/each}}
+
 </div>
-</div>
+<script src="/js/homepage.js"></script>
