--- a/views/subject.handlebars
+++ b/views/subject.handlebars
@@ -1,9 +1,5 @@
 <div id="subjectProfile">
-    {{!-- {{ > subject}} --}}
-    <div class="summary">
-        <h2>Name</h2>
-            <p>Profile</p>
-    </div>
+    {{> profile-chart}}
 
     <button id="askQuestion">Ask Question</button>
 </div>
