Fix up database tables and handlebars

--- a/views/partials/profile-chart.handlebars
+++ b/views/partials/profile-chart.handlebars
@@ -1,5 +1,5 @@
 <div class="summaryChart">
-    <h2>{{Name}}</h2>
+    <h2>{{name}}</h2>
     <div class="summaryContent">
         <p>{{profile_assignment}} </p>
         <div id="chart">testtesttesttesttesttesttesttesttest</div>
