--- a/views/partials/profile-summary.handlebars
+++ b/views/partials/profile-summary.handlebars
@@ -1,12 +1,12 @@
 
 <div class="summary">
     <a href="subject/{{id}}">
-        <h2>{{Name}}</h2>
+        <h2>{{name}}</h2>
     </a>
     <div class="typeSummary">
-        <p>Type1: {{Type_one_answers}}</p>
-        <p>Type2: {{Type_two_answers}}</p>
-        <p>Type3: {{Type_three_answers}}</p>
-        <p>Type4: {{Type_four_answers}}</p>
+        <p>Type1: {{type_one_answers}}</p>
+        <p>Type2: {{type_two_answers}}</p>
+        <p>Type3: {{type_three_answers}}</p>
+        <p>Type4: {{type_four_answers}}</p>
     </div>
 </div>
