--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,20 +2,20 @@
   <form class="login-form">
     <div>
         <h2>Login</h2>
-      <label for="username"><b>Username</b></label>
+      <label for="email-login"><b>Username</b></label>
       <input
         type="text"
         placeholder="Enter Username"
         name="username"
-        id="username"
+        id="email-login"
         required
       />
-      <label for="password"><b>Password</b></label>
+      <label for="password-login"><b>Password</b></label>
       <input
         type="password"
         placeholder="Enter Password"
         name="password"
-        id="password"
+        id="password-login"
         required
       />
       <button type="submit" id="loginBtn">Login</button>
@@ -25,20 +25,20 @@
   <form class="signup-form">
     <div>
         <h2>Sign Up</h2>
-      <label for="username"><b>Username</b></label>
+      <label for="email-signup"><b>Username</b></label>
       <input
         type="text"
         placeholder="Enter Username"
         name="username"
-        id="newUsername"
+        id="email-signup"
         required
       />
-      <label for="password"><b>Password</b></label>
+      <label for="password-signup"><b>Password</b></label>
       <input
         type="password"
         placeholder="Enter Password"
         name="password"
-        id="newPassword"
+        id="password-signup"
         required
       />
       <button type="submit" id="signUpBtn">Sign Up</button>
