--- a/views/subject.handlebars
+++ b/views/subject.handlebars
@@ -1,5 +1,5 @@
 <div id="subjectProfile">
     {{> profile-chart}}
 
-    <button id="askQuestion">Ask Question</button>
+    <a href="/questions" id="askQuestion">Ask Question</a>
 </div>
