--- a/views/questions.handlebars
+++ b/views/questions.handlebars
@@ -1,19 +1,19 @@
 <section id="questionType">
     <h2>Ask a Question</h2>
     <div>
+    <a href="/questions/1">
     <button id="type1">Type1</button>
+    </a>
+    <a href="/questions/2">
     <button id="type2">Type2</button>
+    </a>
+    <a href="/questions/3">
     <button id="type3">Type3</button>
+    </a>
+    <a href="/questions/4">
     <button id="type4">Type4</button>
+    </a>
 </div>
 </section>
+{{> questiondisplay}}
 
-<section id="questionForm">
-    <h2>How is your day?</h2>
-    <div>
-        <input type="range" min="-5" max="5" step="1">
-        <br>
-        <button type="submit" id="questionSubmit">Submit</button>
-    </div>
-</section>
-<script src="/js/question.js"></script>
