--- a/public/css/style.css
+++ b/public/css/style.css
@@ -306,6 +306,7 @@ input[type="range"] {
     font-weight: 400;
     font-style: bold;
     text-decoration: none;
+    text-align: center;
     padding: 15px 15px;
     border: 15px solid var(--accent1);
     border-radius: 47px;
