--- a/public/css/style.css
+++ b/public/css/style.css
@@ -114,8 +114,10 @@ a:hover, nav button:hover {
     background-color: var(--accent1);
     border-radius: 47px;
     margin: 3px;
-    text-align: center;
-    font-size: 40px;
+    padding: 3px;
+    padding-left: 8px;
+    text-align: left;
+    font-size: 36px;
     font-family: 'Share Tech Mono', monospace;
 }
 
