--- a/views/partials/profile-summary.handlebars
+++ b/views/partials/profile-summary.handlebars
@@ -4,9 +4,9 @@
         <h2>{{name}}</h2>
     </a>
     <div class="typeSummary">
-        <p>Type1: {{type_one_answers}}</p>
-        <p>Type2: {{type_two_answers}}</p>
-        <p>Type3: {{type_three_answers}}</p>
-        <p>Type4: {{type_four_answers}}</p>
+        <p>Type1: {{averageScore type_one_answers}}</p>
+        <p>Type2: {{averageScore type_two_answers}}</p>
+        <p>Type3: {{averageScore type_three_answers}}</p>
+        <p>Type4: {{averageScore type_four_answers}}</p>
     </div>
 </div>
