--- a/views/partials/profile-chart.handlebars
+++ b/views/partials/profile-chart.handlebars
@@ -1,7 +1,7 @@
 <div class="summaryChart">
-    <h2>{{name}}</h2>
+    <h2 id="subjectName" >{{subject.name}}</h2>
     <div class="summaryContent">
-        <p>{{profile_assignment}} </p>
+        <p>{{subject.profile_assignment}} </p>
         <div id="chart">testtesttesttesttesttesttesttesttest</div>
     </div>
 
