Tidy up handlebars

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,7 +5,7 @@
       <label for="email-login"><b>Username</b></label>
       <input
         type="text"
-        placeholder="Enter Username"
+        placeholder="Enter Email"
         name="username"
         id="email-login"
         required
@@ -28,7 +28,7 @@
       <label for="email-signup"><b>Username</b></label>
       <input
         type="text"
-        placeholder="Enter Username"
+        placeholder="Enter Email"
         name="username"
         id="email-signup"
         required
