--- a/views/partials/profile-chart.handlebars
+++ b/views/partials/profile-chart.handlebars
@@ -2,11 +2,10 @@
     <h2 id="subjectName" >{{subject.name}}</h2>
     <div class="summaryContent">
         <p>{{profile_assignment}} </p>
+        <div id="chart" style="width:800px">
+          <canvas id="myChart"></canvas>
+        </div>
     </div>
-</div>
-
-<div style="width:500px">
-  <canvas id="myChart"></canvas>
 </div>
 
 <script>
