hide tag questionnumbertype in questions

--- a/views/partials/questiondisplay.handlebars
+++ b/views/partials/questiondisplay.handlebars
@@ -5,7 +5,7 @@
         <br>
         <button type="submit" id="questionSubmit">Submit</button>
         <br>
-        <p id="questionTypeNumber">Type {{question.category_id}}</p>
+        <p id="questionTypeNumber" hidden>Type {{question.category_id}}</p>
     </div>
 </section>
 <script src="/js/question.js"></script>
