add + question button in homepage hndle and js elements in homepagejs

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,6 @@
 <div class="home">
     <button id="addSubject">+ Subject</button>
+    <button id="addQuestion">+ Question</button>
 
     {{#each subjects as |subject|}}
     {{> profile-summary}}
