--- a/public/css/style.css
+++ b/public/css/style.css
@@ -322,6 +322,46 @@ input[type="range"] {
     font-family: 'Share Tech Mono', monospace;
   }
 
+  #createQuestion {
+    width: 200px;
+    margin: 30px;
+    background-color: var(--main);
+    color: var(--accent1);
+    font-family: Trebuchet MS;
+    font-size: 25px;
+    font-weight: 400;
+    font-style: bold;
+    text-decoration: none;
+    padding: 15px 15px;
+    border: 15px solid var(--accent1);
+    border-radius: 47px;
+    display: inline-block;
+    font-family: 'Share Tech Mono', monospace;
+    transition: 0.3s ease;
+    box-shadow: 0px 5px 6px -1px #4d4f4c;
+  }
+
+  #newQuestion {
+    width: 500px;
+    height: 45px;
+    text-align: center;
+    background-color: #cfdabd;
+    font-family: 'Share Tech Mono', monospace;
+    font-size: 30px;
+    border: none;
+    border-radius: 25px;
+  }
+
+  #addQuestion {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #addQuestion button,  #addQuestion input {
+    margin: auto;
+    margin-top: 30px;
+  }
+
   #createSubject {
     width: 200px;
     margin: 30px;
