get the radio buttons to return values when clicked

--- a/views/add-question.handlebars
+++ b/views/add-question.handlebars
@@ -7,8 +7,19 @@
         id="newQuestion"
         required
       />
-      <button type="submit" id="createQuestion">Create Question</button>
+      
         </div>
+    <div id="addQuestionType">
+        <input type="radio" id="newQuestionType" name="type" value="1" required>
+        <label for="type1">Type 1</label>
+        <input type="radio" id="newQuestionType" name="type" value="2">
+        <label for="type2">Type 2</label>
+        <input type="radio" id="newQuestionType" name="type" value="3">
+        <label for="type3">Type 3</label>
+        <input type="radio" id="newQuestionType" name="type" value="4">
+        <label for="type3">Type 4</label>
+        <button type="submit" id="createQuestion">Create Question</button>
+  </div>
 </form>
 
 <script src="/js/createQuestion.js"></script>
