--- a/public/css/style.css
+++ b/public/css/style.css
@@ -339,6 +339,7 @@ input[type="range"] {
     font-family: 'Share Tech Mono', monospace;
     transition: 0.3s ease;
     box-shadow: 0px 5px 6px -1px #4d4f4c;
+    text-align: center;
   }
 
   #newQuestion {
@@ -357,7 +358,7 @@ input[type="range"] {
     flex-direction: column;
   }
 
-  #addQuestion button,  #addQuestion input {
+  #addQuestion div {
     margin: auto;
     margin-top: 30px;
   }
