--- a/views/add-question.handlebars
+++ b/views/add-question.handlebars
@@ -1,4 +1,4 @@
-<form>
+<form id="addQuestion">
         <div id="addQuestion">
             <input
         type="text"
@@ -18,6 +18,8 @@
         <label for="type3">Type 3</label>
         <input type="radio" id="newQuestionType" name="type" value="4">
         <label for="type3">Type 4</label>
+    </div>
+    <div
         <button type="submit" id="createQuestion">Create Question</button>
   </div>
 </form>
