--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,8 @@
 <div class="home">
-    <button id="addSubject">+ Subject</button>
-    <button id="addQuestion">+ Question</button>
+    <div id="btnHome">
+        <button id="addSubject">+ Subject</button>
+        <button id="addQuestion">+ Question</button>
+    </div>
 
     {{#each subjects as |subject|}}
     {{> profile-summary}}
