handlebars, routes, and prose for about and tips

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,6 +18,8 @@
         {{else}}
           <a href="/login" id="login">Login</a>
         {{/if}}
+          <a href="/about" id="about">About</a>
+          <a href="/tips"  id="tips">Tips for Reading</a>
       </nav>
     </header>
     <main>
