--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,6 +14,7 @@
       <nav>
         {{#if loggedIn}}
           <a href="/" id="home">Home</a>
+          <a href="/chart" id="home">Charts</a>
           <button id="logout">Logout</button>
         {{else}}
           <a href="/login" id="login">Login</a>
