--- a/public/css/style.css
+++ b/public/css/style.css
@@ -86,7 +86,7 @@ a:hover, nav button:hover {
 }
 
 .summary {
-    width: 40%;
+    width: 60%;
     border: 10px solid var(--accent1);
     box-shadow: 0px 5px 6px -1px #4d4f4c;
     margin-bottom: 50px;
@@ -464,6 +464,7 @@ input[type="range"] {
 
   #addQuestionType {
     font-family: 'Share Tech Mono', monospace;
+    color: var(--accent1);
   }
 
   #addQuestionType input {
