Add rest of data to chart

--- a/views/charts.handlebars
+++ b/views/charts.handlebars
@@ -28,8 +28,23 @@ const dataConsistency = [{{#each subjects as |subject|}}
         label: 'Emotions',
         data: dataEmotions,
         borderWidth: 1
+      },
+      {
+        label: 'Thoughts',
+        data: dataThoughts,
+        borderWidth: 1
+      },
+      {
+        label: 'Cofidence',
+        data: dataConfidence,
+        borderWidth: 1
+      },
+      {
+        label: 'Consistency',
+        data: dataConsistency,
+        borderWidth: 1
       }]
-    },
+    }
   });
 }); 
 </script>
